import java.util.ArrayList;
import java.util.Collections;
import java.util.List;

public class Game {
    private String name;
    private List<Player> players;
    private TextUI ui;
    private FileIO io;
    private String playerDataPath;
    private Player currentPlayer;
    private Dice dice;
    Board board;

    public Game(String name) {
        this.name = name;
        this.players = new ArrayList<>();
        this.ui = new TextUI();
        this.io = new FileIO();
        this.playerDataPath ="data/playerdata.csv";
        this.dice = new Dice();
    }
    public void addPlayer(Player p){
        this.players.add(p);
    }
    public String toString(){
        String s = "";
        for (Player p: players) {
            s+=p+"\n";
        }
        return s;
    }


    public List getPlayers() {
            return players;
    }

    public void registerPlayers() {
        int playerNum = ui.promptNumeric("Type number of players.");
        if (playerNum < 2 || playerNum > 6){
            ui.displayMsg("The number must be between 2 and 6 incl.");
            registerPlayers();
            return;
        }
        while (players.size() < playerNum) {
            String name = ui.promptText("Type name of player " + (players.size()+1) + ":");
            int startAmount = ui.promptNumeric("Type start amount:");
            Player p = new Player(name, startAmount);
            this.addPlayer(p);
        }
        Collections.shuffle(players);
    }
   public void setup(){
    ui.displayMsg("Welcome to " + this.name); 
     ArrayList<String> data = io.readPlayerData(this.playerDataPath);

       if(!data.isEmpty() && ui.promptBinary("Do you want to continue the game? y/n")) {
           for (String s:data) {
               String[] values= s.split(",");
               String name = values[0];
               int balance = Integer.parseInt(values[1].trim());
               Player p = new Player(name, balance);
               players.add(p);
           }
       }
       else{
           registerPlayers();
       }

       String[] carddata =  io.readBoardData("data/carddata.csv", 100);
       String[] fielddata = io.readBoardData("data/fielddata.csv", 40);
       board = new Board(fielddata, carddata);
       System.out.println(board.getField(40));
       System.out.println(Board.cardDeck.getNext());

   }

   public void throwAndMove(){
       ui.displayMsg("It's now " + currentPlayer.getName() + "'s turn");
        int result = dice.rollDiceSum();
        ui.displayMsg(currentPlayer.getName() + " slog " + result);
        int newPosition = currentPlayer.updatePosition(result);
        Field f = board.getField(newPosition);
        landAndAct(f);

   }

   public void landAndAct(Field f){
        String msg = f.onLand(currentPlayer); //Egon er landet på valbylanggade
        boolean response = ui.promptBinary(msg);
        msg = f.processResponse(currentPlayer, response);//Egon har købt valbylangggade
        ui.displayMsg(msg);

   }

   public void runGameLoop(){
        int count = 0;
        boolean continueGame = true;
        while(continueGame){
            currentPlayer = players.get(count);
            throwAndMove();
            continueGame = ui.promptBinary("Continue game? Y/N");
            if(count == players.size()-1) {
                count = 0;
            }
            else {
                count++;
            }
        }
   }
    public void endGame(){
        ui.displayMsg("Game is ending");

        ArrayList<String> playersAsText = new ArrayList<>();
        for (Player p: players) {
            playersAsText.add(p.toString());
        }
        FileIO.saveData(playersAsText, this.playerDataPath, "name, balance");
    }

}
